--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,13 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.firebase.appdistribution'
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.lenecoproekt.minesweeper"
@@ -20,9 +22,11 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            release{
+            firebaseAppDistribution {
+                releaseNotesFile="C:\\Users\\rumig\\AndroidStudioProjects\\Minesweeper2\\releasenotes.txt"
+                testers="rumigor@gmail.com, a.avilushkina@gmail.com"
+            }
         }
     }
 
@@ -39,26 +43,58 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
-    def room_version = "2.2.6"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
 
-}
-repositories {
-    mavenCentral()
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation "com.github.moxy-community:moxy:2.2.2"
+    implementation "com.github.moxy-community:moxy-ktx:2.2.2"
+    implementation "com.github.moxy-community:moxy-androidx:2.2.2"
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation "io.reactivex.rxjava3:rxjava:3.1.3"
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+    implementation platform('com.google.firebase:firebase-bom:26.8.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3")
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+    implementation  "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
+
+    implementation ("com.github.bumptech.glide:glide:4.12.0"){
+        exclude group: "com.android.support"
+    }
+
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0@aar"
+
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-rxjava3:2.3.0"
+
+    implementation 'com.github.terrakok:cicerone:7.0'
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation ("com.github.bumptech.glide:glide:4.12.0@aar") {
+        transitive = true
+    }
+
+    kapt "com.github.moxy-community:moxy-compiler:2.2.2"
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
+
+    kapt "androidx.room:room-compiler:2.3.0"
+
+    kapt "com.google.dagger:dagger-compiler:2.40.5"
+    kapt "com.google.dagger:dagger-android-processor:2.40.5"
+
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.mockk:mockk:1.12.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
 }
